--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -7,6 +7,27 @@
     margin-top: 3rem;
 }
 
+/** Padding */
+.p-05{
+    padding: 0.5rem;
+}
+
+.p-1{
+    padding: 1rem;
+}
+
+.p-1-5{
+    padding: 1.5rem;
+}
+
+.p-2{
+    padding: 2rem;
+}
+
+.p-fixed{
+    position: fixed;
+}
+
 /** Position **/
 .p-relative{
     position: relative;
@@ -20,9 +41,21 @@
     position: absolute;
 }
 
+.p-fixed{
+    position: fixed;
+}
+
 /** Gap **/
+.gap-01{
+    gap: .1rem;
+}
+
 .gap-025{
     gap: 0.25rem;
+}
+
+.gap-035{
+    gap: 0.35rem;
 }
 
 .gap-1{
@@ -33,6 +66,10 @@
     gap: 0.5rem;
 }
 
+.gap-075{
+    gap: 0.75rem;
+}
+
 .gap-1-5{
     gap: 1.5rem;
 }
@@ -41,17 +78,45 @@
     gap: 2rem;
 }
 
+.gap-3{
+    gap: 3rem;
+}
+
 /** Container **/
 .w-max{
     width: 100%;
+}
+
+.w-50{
+    width: 50%;
 }
 
 .h-max{
     height: 100%;
 }
 
+.wh-max{
+    width: 100vw;
+}
+
 .vh-max{
     height: 100vh;
+}
+
+.y-scroll{
+    overflow-y: scroll;
+}
+
+.overflow-auto{
+    overflow: auto;
+}
+
+.overflow-hidden{
+    overflow: hidden;
+}
+
+.inset-0{
+    inset: 0;
 }
 
 /** Flexbox **/
@@ -66,6 +131,10 @@
 .items-center,
 .flex-center{
     align-items: center;
+}
+
+.flex-start{
+    align-items: flex-start;
 }
 
 .content-center,
@@ -98,8 +167,22 @@
     text-align: center;
 }
 
+/** Other **/
+.u-select-none{
+    user-select: none;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
 /** Mobile **/
 @media (max-width: 768px){
+    /** Padding **/
+    .sm\:p-1-5{
+        padding: 1.5rem;
+    }
+
     /** Flexbox **/
     .sm\:column{
         flex-direction: column;
@@ -115,6 +198,10 @@
 
     .sm\:gap-1{
         gap: 1rem;
+    }
+
+    .sm\:gap-0{
+        gap: 0;
     }
 
     .sm\:a-self-end{
