--- a/client/src/components/molecules/common/JobsHistory/JobsHistory.css
+++ b/client/src/components/molecules/common/JobsHistory/JobsHistory.css
@@ -1,10 +1,5 @@
-.jobs-history-container{
-    border-radius: 12px;
-    background: transparent;
-}
 
-.jobs-history-container .MuiStack-root{
-    padding: .5rem 1rem;
-}
+
+.jobs-history-container 
 
 .jobs-history-container > .job-container + .job-container{ border-top: 1px solid rgba(255, 255, 255, 0.06); }
