--- a/client/src/components/atoms/common/ToastContainer/ToastContainer.css
+++ b/client/src/components/atoms/common/ToastContainer/ToastContainer.css
@@ -1,15 +1,12 @@
 .toast-container {
-  position: fixed;
   bottom: 1rem;
   right: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
   z-index: 9999999999999;
   max-width: 400px;
   pointer-events: none;
 }
 
+/** TODO: Unused? **/
 .toast {
   display: flex;
   align-items: center;
