--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -11,6 +11,10 @@
     margin-bottom: 1.5rem;
 }
 
+.mb-3{
+    margin-bottom: 3rem;
+}
+
 /** Padding */
 .p-05{
     padding: 0.5rem;
@@ -152,6 +156,10 @@
 
 .content-between{
     justify-content: space-between;
+}
+
+.content-end{
+    justify-content: flex-end;
 }
 
 .row-reverse{
