--- a/client/src/components/organisms/scene/SlicePlane/SlicePlane.css
+++ b/client/src/components/organisms/scene/SlicePlane/SlicePlane.css
@@ -1,25 +1,24 @@
-.slice-plane-container{
+.slice-plane-container {
     bottom: 2rem;
     overflow: hidden;
     right: 2rem;
-    display: flex;
-    flex-direction: column;
+    /* display: flex handled by EditorWidget */
 }
 
-.slice-plane-normal-input-container{
+.slice-plane-normal-input-container {
     background-color: rgba(49, 49, 49, 0.8);
     border-radius: 5rem;
     padding: 0 .8rem;
     height: 35px;
 }
 
-.slice-plane-normal-input{
+.slice-plane-normal-input {
     background-color: transparent;
     width: 25px;
     color: #ebebeb;
 }
 
 .slice-plane-normal-input-extended,
-.slice-plane-toggle-extended{
+.slice-plane-toggle-extended {
     width: 150px;
 }
